Fixed size of cells on mobile screens

--- a/assets/index.css
+++ b/assets/index.css
@@ -571,4 +571,11 @@ body.glassmorphism.dark {
     .tic-tac-area {
         margin: 175px 10px;
     }
+    .cell {
+        width: 75px;
+        height: 75px;
+    }
+    #settings {
+        max-width: 350px;
+    }
 }
